# Specify the build system.
[build-system]
requires = ["sip >=5.0.0, <7", "PyQt-builder >=1.6, <2"]
build-backend = "sipbuild.api"

[tool.sip.project]
sip-include-dirs = ["/home/kai/Work/mamba310/envs/sip/lib/python3.11/site-packages/PyQt5/bindings/"]
# sip-include-dirs = ["/usr/lib/python3/dist-packages/PyQt5/bindings/"]

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "edlib"
version = "0.0.1"
summary = "Python bindings for editors library"
home-page = "https://kai.org"
author = "MIPT software development"
license = "GPL v2"
requires-dist = "PyQt5"

[tool.sip.bindings.edlib]
pep484-pyi = true
define-macros = [
    "EDLIB_LIBRARY",
    "TEXTEDITOR_LIBRARY",
    "QTCREATOR_UTILS_LIB",
    "CORELIB_LIBRARY",
    "PYTHONEDITOR_LIBRARY",
    "CPPEDITOR_LIBRARY",
]
sip-file = "edlib.sip"
include-dirs = [
    "../edlib",
    "../edlib/texteditor",
    "../edlib/texteditor/core",
    "../edlib/texteditor/utils",
    "../edlib/texteditor/tooltip",
    "../edlib/texteditor/snippets",
    "../edlib/texteditor/codeassist",
    "../edlib/pythoneditor",
    "../edlib/cppeditor",
    "../edlib/cppeditor/cplusplus",
]
qmake-QT = ["widgets", "printsupport", "xml", "network"]
headers = [
    "../edlib/edlib_global.h",
    "../edlib/edlib.h",
    "../edlib/edlib.h",
    "../edlib/texteditor/texteditor_global.h",
    "../edlib/texteditor/basetexteditor.h",
    "../edlib/texteditor/texteditor.h",
    "../edlib/texteditor/texteditoroverlay.h",
    "../edlib/texteditor/refactoroverlay.h",
    "../edlib/texteditor/basetextdocument.h",
    "../edlib/texteditor/basetexteditor_p.h",
    "../edlib/texteditor/texteditorsettings.h",
    "../edlib/texteditor/behaviorsettings.h",
    "../edlib/texteditor/displaysettings.h",
    "../edlib/texteditor/fontsettings.h",
    "../edlib/texteditor/completionsettings.h",
    "../edlib/texteditor/typingsettings.h",
    "../edlib/texteditor/storagesettings.h",
    "../edlib/texteditor/extraencodingsettings.h",
    "../edlib/texteditor/icodestylepreferences.h",
    "../edlib/texteditor/icodestylepreferencesfactory.h",
    "../edlib/texteditor/colorscheme.h",
    "../edlib/texteditor/basetextdocumentlayout.h",
    "../edlib/texteditor/texteditorconstants.h",
    "../edlib/texteditor/indenter.h",
    "../edlib/texteditor/tabsettings.h",
    "../edlib/texteditor/syntaxhighlighter.h",
    "../edlib/texteditor/highlighterformatsmanager.h",
    "../edlib/texteditor/codestylepool.h",
    "../edlib/texteditor/codecselector.h",
    "../edlib/texteditor/convenience.h",
    "../edlib/texteditor/autocompleter.h",
    "../edlib/texteditor/core/corelib_global.h",
    "../edlib/texteditor/core/coreconstants.h",
    "../edlib/texteditor/core/itexteditor.h",
    "../edlib/texteditor/core/ifile.h",
    "../edlib/texteditor/core/textfile.h",
    "../edlib/texteditor/core/infobar.h",
    "../edlib/texteditor/core/ifindsupport.h",
    "../edlib/texteditor/core/manhattanstyle.h",
    "../edlib/texteditor/core/styleanimator.h",
    "../edlib/texteditor/codeassist/codeassistant.h",
    "../edlib/texteditor/codeassist/runner.h",
    "../edlib/texteditor/codeassist/iassistinterface.h",
    "../edlib/texteditor/codeassist/iassistprovider.h",
    "../edlib/texteditor/codeassist/completionassistprovider.h",
    "../edlib/texteditor/codeassist/defaultassistinterface.h",
    "../edlib/texteditor/snippets/isnippetprovider.h",
    "../edlib/texteditor/snippets/plaintextsnippetprovider.h",
    "../edlib/texteditor/snippets/reuse.h",
    "../edlib/texteditor/snippets/snippet.h",
    "../edlib/texteditor/snippets/snippeteditor.h",
    "../edlib/texteditor/snippets/snippetscollection.h",
    "../edlib/texteditor/snippets/snippetssettings.h",
    "../edlib/texteditor/tooltip/tooltip.h",
    "../edlib/texteditor/tooltip/tipcontents.h",
    "../edlib/texteditor/tooltip/tipfactory.h",
    "../edlib/texteditor/tooltip/tips.h",
    "../edlib/texteditor/utils/utils_global.h",
    "../edlib/texteditor/utils/settingsutils.h",
    "../edlib/texteditor/utils/qtcfileutils.h",
    "../edlib/texteditor/utils/qtcassert.h",
    "../edlib/texteditor/utils/savefile.h",
    "../edlib/texteditor/utils/algorithm.h",
    "../edlib/texteditor/utils/hostosinfo.h",
    "../edlib/texteditor/utils/osspecificaspects.h",
    "../edlib/texteditor/utils/consoleprocess.h",
    "../edlib/texteditor/utils/consoleprocess_p.h",
    "../edlib/texteditor/utils/qtcprocess.h",
    "../edlib/texteditor/utils/environment.h",
    "../edlib/texteditor/utils/unixutils.h",
    "../edlib/texteditor/utils/stringutils.h",
    "../edlib/texteditor/utils/uncommentselection.h",
    "../edlib/texteditor/utils/persistentsettings.h",
    "../edlib/texteditor/utils/textfileformat.h",
    "../edlib/texteditor/utils/changeset.h",
    "../edlib/texteditor/utils/stylehelper.h",
    "../edlib/pythoneditor/tools/lexical/pythonscanner.h",
    "../edlib/pythoneditor/tools/lexical/pythonformattoken.h",
    "../edlib/pythoneditor/tools/lexical/sourcecodestream.h",
    "../edlib/pythoneditor/tools/pythonhighlighter.h",
    "../edlib/pythoneditor/tools/pythonindenter.h",
    "../edlib/pythoneditor/pythoneditor_global.h",
    "../edlib/pythoneditor/pythoneditorwidget.h",
    "../edlib/pythoneditor/pythonhighlighterformatsdata.h",
    "../edlib/cppeditor/cppeditor_global.h",
    "../edlib/cppeditor/cppeditorenums.h",
    "../edlib/cppeditor/cppeditor.h",
    "../edlib/cppeditor/cpphighlighter.h",
    "../edlib/cppeditor/cppdoxygen.h",
    "../edlib/cppeditor/cpphighlighterformatsdata.h",
    "../edlib/cppeditor/cplusplus/SimpleLexer.h",
    "../edlib/cppeditor/cplusplus/Token.h",
    "../edlib/cppeditor/cplusplus/Lexer.h",
]
sources = [
    "../edlib/edlib.cpp",
    "../edlib/texteditor/texteditor.cpp",
    "../edlib/texteditor/texteditoroverlay.cpp",
    "../edlib/texteditor/refactoroverlay.cpp",
    "../edlib/texteditor/texteditorsettings.cpp",
    "../edlib/texteditor/behaviorsettings.cpp",
    "../edlib/texteditor/displaysettings.cpp",
    "../edlib/texteditor/fontsettings.cpp",
    "../edlib/texteditor/completionsettings.cpp",
    "../edlib/texteditor/typingsettings.cpp",
    "../edlib/texteditor/storagesettings.cpp",
    "../edlib/texteditor/extraencodingsettings.cpp",
    "../edlib/texteditor/icodestylepreferences.cpp",
    "../edlib/texteditor/icodestylepreferencesfactory.cpp",
    "../edlib/texteditor/colorscheme.cpp",
    "../edlib/texteditor/basetextdocumentlayout.cpp",
    "../edlib/texteditor/basetextdocument.cpp",
    "../edlib/texteditor/indenter.cpp",
    "../edlib/texteditor/tabsettings.cpp",
    "../edlib/texteditor/syntaxhighlighter.cpp",
    "../edlib/texteditor/highlighterformatsmanager.cpp",
    "../edlib/texteditor/codestylepool.cpp",
    "../edlib/texteditor/codecselector.cpp",
    "../edlib/texteditor/convenience.cpp",
    "../edlib/texteditor/autocompleter.cpp",
    "../edlib/texteditor/core/itexteditor.cpp",
    "../edlib/texteditor/core/ifile.cpp",
    "../edlib/texteditor/core/textfile.cpp",
    "../edlib/texteditor/core/infobar.cpp",
    "../edlib/texteditor/core/ifindsupport.cpp",
    "../edlib/texteditor/core/manhattanstyle.cpp",
    "../edlib/texteditor/core/styleanimator.cpp",
    "../edlib/texteditor/codeassist/codeassistant.cpp",
    "../edlib/texteditor/codeassist/runner.cpp",
    "../edlib/texteditor/codeassist/iassistinterface.cpp",
    "../edlib/texteditor/codeassist/iassistprovider.cpp",
    "../edlib/texteditor/codeassist/completionassistprovider.cpp",
    "../edlib/texteditor/codeassist/defaultassistinterface.cpp",
    "../edlib/texteditor/snippets/isnippetprovider.cpp",
    "../edlib/texteditor/snippets/plaintextsnippetprovider.cpp",
    "../edlib/texteditor/snippets/snippet.cpp",
    "../edlib/texteditor/snippets/snippeteditor.cpp",
    "../edlib/texteditor/snippets/snippetscollection.cpp",
    "../edlib/texteditor/snippets/snippetssettings.cpp",
    "../edlib/texteditor/tooltip/tooltip.cpp",
    "../edlib/texteditor/tooltip/tipcontents.cpp",
    "../edlib/texteditor/tooltip/tipfactory.cpp",
    "../edlib/texteditor/tooltip/tips.cpp",
    "../edlib/texteditor/utils/qtcfileutils.cpp",
    "../edlib/texteditor/utils/qtcassert.cpp",
    "../edlib/texteditor/utils/savefile.cpp",
    "../edlib/texteditor/utils/hostosinfo.cpp",
    "../edlib/texteditor/utils/consoleprocess.cpp",
    "../edlib/texteditor/utils/consoleprocess_unix.cpp",
    "../edlib/texteditor/utils/qtcprocess.cpp",
    "../edlib/texteditor/utils/environment.cpp",
    "../edlib/texteditor/utils/unixutils.cpp",
    "../edlib/texteditor/utils/stringutils.cpp",
    "../edlib/texteditor/utils/uncommentselection.cpp",
    "../edlib/texteditor/utils/persistentsettings.cpp",
    "../edlib/texteditor/utils/textfileformat.cpp",
    "../edlib/texteditor/utils/changeset.cpp",
    "../edlib/texteditor/utils/stylehelper.cpp",
    "../edlib/pythoneditor/tools/lexical/pythonscanner.cpp",
    "../edlib/pythoneditor/tools/pythonindenter.cpp",
    "../edlib/pythoneditor/tools/pythonhighlighter.cpp",
    "../edlib/pythoneditor/pythoneditorwidget.cpp",
    "../edlib/pythoneditor/pythonhighlighterformatsdata.cpp",
    "../edlib/cppeditor/cppeditor.cpp",
    "../edlib/cppeditor/cpphighlighter.cpp",
    "../edlib/cppeditor/cppdoxygen.cpp",
    "../edlib/cppeditor/cpphighlighterformatsdata.cpp",
    "../edlib/cppeditor/cplusplus/SimpleLexer.cpp",
    "../edlib/cppeditor/cplusplus/Token.cpp",
    "../edlib/cppeditor/cplusplus/Lexer.cpp",
    "../edlib/cppeditor/cplusplus/Keywords.cpp",
    "../edlib/cppeditor/cplusplus/ObjectiveCAtKeywords.cpp",
]
